# depth-anything-rs

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  bench_head_ab.sh
.cargo/: config.toml
docs/: BENCHMARK_RESULTS.md  GPU.md  PORT_TO_CANDLE_SPEC.md  RUST_PORT.md
examples/: bench.rs  da3.rs  fast_conv_bench.rs  gelu_bench.rs  gemm_bench.rs  head_parity.rs  head_profile.rs  kquant_parity.rs  lateral3_bench.rs  parity.rs  parity_preproc.rs  pfm_compare.rs  preprocess_bench.rs  probe_hotspots.rs  ray_pose_parity.rs  tinyblas_bench.rs
models/: MODEL_CARD.md  SHA256SUMS
scripts/: publish_gguf.sh
src/: attention.rs  backbone.rs  cam_pose.rs  colmap_export.rs  config.rs  depth_export.rs  dpt_head.rs  engine.rs  fast_attn.rs  fast_block.rs  fast_conv.rs  fast_dpt.rs  fast_profile.rs  flash_attn.rs  gguf.rs  glb_export.rs  gs_adapter.rs  gs_head.rs  kquants.rs  lib.rs  linalg.rs  nested.rs  ply_export.rs  pos_embed.rs  preprocess.rs  ray_pose.rs  reconstruct.rs  rope2d.rs  tinyblas.rs  uv_embed.rs  vit_block.rs  weights.rs
tests/: gs_adapter_giant_parity.rs  reconstruct_giant_parity.rs
